2005-07-06  Dalibor Topic  <robilad@kaffe.org>

	* kaffe/jvmpi/jvmpi_kaffe.h: Added missing classMethod.h include.

	* kaffe/kaffevm/jni/jni-refs.c: Added missing jvmpi_kaffe.h include.

2005-07-06  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.

	2005-07-06  David Gilbert  <david.gilbert@object-refinery.com>

        * java/awt/AWTKeyStroke.java: fixed API doc links,
        * java/awt/BufferCapabilities.java: likewise,
        * java/awt/ColorPaintContext.java: likewise,
        * java/awt/Component.java: likewise,
        * java/awt/Container.java: likewise,
        * java/awt/EventQueue.java: likewise,
        * java/awt/GraphicsDevice.java: likewise,
        * java/awt/Image.java: likewise,
        * java/awt/KeyboardFocusManager.java: likewise,
        * java/awt/MediaTracker.java: likewise,
        * java/awt/PrintJob.java: likewise,
        * java/awt/Robot.java: likewise.

	2005-07-06  David Gilbert  <david.gilbert@object-refinery.com>

        * javax/swing/JTable.java
        (setAutoCreateColumnsFromModel): when the flag changes from false to
        true, call createDefaultColumnsFromModel().

2005-07-06  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.

	2005-07-05  David Gilbert  <david.gilbert@object-refinery.com>

        * javax/swing/JTable.java
        (getColumnName): return name from column in data model.

	2005-07-05  Thomas Fitzsimmons  <fitzsim@redhat.com>

        * java/awt/DefaultKeyboardFocusManager.java (dispatchEvent): Check
        parent and target before casting target to Window.

	2005-07-05  David Gilbert  <david.gilbert@object-refinery.com>

        * javax/swing/AbstractAction.java: updated API docs,
        * javax/swing/Action.java: likewise.

	2005-07-05  David Gilbert  <david.gilbert@object-refinery.com>

        * java/applet/Applet.java: added import to fix API doc link.

	2005-07-05  Audrius Meskauskas  <AudriusA@Bioinformatics.org>

        * javax/swing/text/StyleContext.java