@@ -1,5 +1,12 @@
 2005-07-06  Dalibor Topic  <robilad@kaffe.org>
 
+	* libraries/clib/awt/classpath-gtk/gtk-peer/Makefile.am
+	(libgtkpeer_la_SOURCES): Removed gnu_java_awt_peer_gtk_GtkTextComponentPeer.c.
+
+	Reported by:  Akhilesh Shirbhate <akhilesh.hacking@gmail.com>
+
+2005-07-06  Dalibor Topic  <robilad@kaffe.org>
+
 	* kaffe/jvmpi/jvmpi_kaffe.h: Added missing classMethod.h include.
 
 	* kaffe/kaffevm/jni/jni-refs.c: Added missing jvmpi_kaffe.h include.
